[package]
name = "synknodes"
version = "0.1.0"
edition = "2021"
description = "A distributed key-value store node implementation"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/synknodes"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"

[dev-dependencies]
tokio-test = "0.4"